<resources>
    <string name="app_name">Madar</string>
    <string name="add_info">Add Your Info</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_job">Enter Job Title</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="your_info">Your Info</string>
    <string name="validation_msg">*All fields are required, please fill all fields</string>
</resources>